Documentation for clonotype functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,9 +4,13 @@ export(cellranger_vdj_filter)
 export(cellranger_vdj_load)
 export(cellranger_vdj_order)
 export(cellranger_vdj_parse_by_cell)
+export(clonotype_filter)
 export(consensus_merge)
+export(no_empty)
+export(paste_vdj)
 export(plot_vdj_clones_dimred)
 export(seurat_vdj_add_to_meta)
+import(dplyr)
 import(ggplot2)
 importFrom(Seurat,AddMetaData)
 importFrom(Seurat,FetchData)
