--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ export(cellranger_vdj_load)
 export(cellranger_vdj_order)
 export(cellranger_vdj_parse_by_cell)
 export(clonotype_filter)
+export(clonotype_top)
 export(consensus_merge)
 export(no_empty)
 export(paste_vdj)
