Add circos plot functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,8 +9,11 @@ export(clonotype_top)
 export(consensus_merge)
 export(no_empty)
 export(paste_vdj)
+export(plot_vdj_circos)
+export(plot_vdj_circos_seurat)
 export(plot_vdj_clones_dimred)
 export(seurat_vdj_add_to_meta)
+import(circlize)
 import(dplyr)
 import(ggplot2)
 importFrom(Seurat,AddMetaData)
