Fixed dimreduction plot

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(paste_vdj)
 export(plot_vdj_circos)
 export(plot_vdj_circos_seurat)
 export(plot_vdj_clones_dimred)
+export(plot_vdj_clones_dimred_seurat)
 export(seurat_vdj_add_to_meta)
 import(circlize)
 import(dplyr)
